--- a/about.html
+++ b/about.html
@@ -5,8 +5,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>hh
-    <link href="portfolioStyle.css" rel="stylesheet">
+    <title>Document</title> 
+    <h1>Himmaaa</h1>
+    <p id="stunt"> As you now from the header my name is Himma. So lets talk a bit about me and my background! I attend The Peddie School, which is a boarding
+        school, in Hightstown, New Jersey </p>
+        
+    <p> I love engineering. I started a robotics team in middle school and continued my
+        love since. A little insert is that my favorite color is orange. Along with participating in robotics I play field
+        hockey and lacrosse. </p>
+    <link rel="stylesheet" href="portfolioStyle.css" >
 </head>
 
 <body>
@@ -20,6 +27,7 @@
     <iframe src="Himma Aklilu - Resume Template + HS Example.pdf" 
     height="400px" 
     width="600px"
+
 
 </body>
 
