--- a/about.html
+++ b/about.html
@@ -6,28 +6,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title> 
-    <h1>Himmaaa</h1>
+  
+    <link rel="stylesheet" href="portfolioStyle.css" >
+</head>
+
+<h1>Himmaaa</h1>
+
+<body>
+
+        <nav>
+                <a href="about.html"> About me</a>
+                <a href="resume.html"> Resume</a>
+                <a href="project.html"> Project </a>
+                <a href="contact.html"> Contact me</a>
+            </nav>
+        
+        <img src ="IMG_1479.jpg"> 
+        <footer> Me (right) with my friend on the ferry. </footer>
+
     <p id="stunt"> As you now from the header my name is Himma. So lets talk a bit about me and my background! I attend The Peddie School, which is a boarding
-        school, in Hightstown, New Jersey </p>
+        school, in Hightstown, New Jersey. </p>
         
     <p> I love engineering. I started a robotics team in middle school and continued my
         love since. A little insert is that my favorite color is orange. Along with participating in robotics I play field
         hockey and lacrosse. </p>
-    <link rel="stylesheet" href="portfolioStyle.css" >
-</head>
-
-<body>
-    <nav>
-        <a href="about.html"> About me</a>
-        <a href="resume.html"> Resume</a>
-        <a href="project.html"> Project </a>
-        <a href="contact.html"> Contact me</a>
-    </nav>
-    <h1>Resume</h1>
-    <iframe src="Himma Aklilu - Resume Template + HS Example.pdf" 
-    height="400px" 
-    width="600px"
-
 
 </body>
 
