--- a/about.html
+++ b/about.html
@@ -5,12 +5,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <!-- //TODO: Don't forget to include the css link on every page. -->
     <title>Document</title> 
     <link rel="stylesheet" href="portfolioStyle.css" >
+    <link href="https://fonts.googleapis.com/css?family=Caveat|Tangerine" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=PT+Serif|Roboto+Slab" rel="stylesheet">
 </head>
 
-<h1>Himmaaa</h1>
+<h1>
+        <img src ="Screenshot (14).png"> 
+</h1>
 
 <body>
 
@@ -21,15 +24,16 @@
                 <a href="contact.html"> Contact me</a>
             </nav>
         
-        <img src ="IMG_1479.jpg"> 
-        <footer> Me (right) with my friend on the ferry. </footer>
+        <img src ="IMG_1479.jpg" id= "img"> 
+        <footer id="fonts2"> <strong> (right) with my friend on the ferry. </strong></footer>
 
-    <p id="stunt"> As you now from the header my name is Himma. So lets talk a bit about me and my background! I attend The Peddie School, which is a boarding
-        school, in Hightstown, New Jersey. </p>
+   <div id="div.a"><p id="fonts1"> <strong>As you now from the header my name is Himma. 
+       So lets talk a bit about me and my background! I attend The Peddie School, 
+       which is a boarding school, in Hightstown, New Jersey.</strong> </p> </div> 
         
-    <p> I love engineering. I started a robotics team in middle school and continued my
+   <div id="div.b"> <p id="fonts1"> <strong> I love engineering. I started a robotics team in middle school and continued my
         love since. A little insert is that my favorite color is orange. Along with participating in robotics I play field
-        hockey and lacrosse. </p>
+        hockey and lacrosse.</strong> </p> </div>
 
 </body>
 
