--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" href="portfolioStyle - Copy.css" >
+    <link href="https://fonts.googleapis.com/css?family=PT+Serif|Roboto+Slab" rel="stylesheet">
 </head>
 <body>
         <nav>
@@ -13,6 +15,10 @@
                 <a href="project.html"> Project </a>
                 <a href="contact.html"> Contact me</a>
             </nav>
+
     <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdmkUake1bYBSCf1gbrfnpKS0b0QjLiss5FZvEYyUS8RLfAcg/viewform?embedded=true" width="700" height="520" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+   
+    <img src ="contact me pic.png"> 
+
 </body>
 </html>
