--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
             <!-- //TODO:  Makes sure your document title is the same as the link 
     description for each page -->
         <title>Document</title>
-        <!-- TODO: Watch the spelling... it's rel, not ref, so your link is broken -->
-        <link ref="stylesheet" href="portfolioStyle.css">
+  
+        <link rel="stylesheet" href="portfolioStyle.css">
 
     </head>
     <h1>Himmaaa</h1>
