--- a/about.html
+++ b/about.html
@@ -9,11 +9,18 @@
     <link rel="stylesheet" href="portfolioStyle.css" >
     <link href="https://fonts.googleapis.com/css?family=Caveat|Tangerine" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=PT+Serif|Roboto+Slab" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+<div class="icon-bar">
+  <a class="active" href="#"><i class="fa fa-home"></i></a> 
+  <a href="#"><i class="fa fa-search"></i></a> 
+  <a href="#"><i class="fa fa-envelope"></i></a> 
+  <a href="#"><i class="fa fa-globe"></i></a>
+  <a href="#"><i class="fa fa-trash"></i></a> 
+</div>
 </head>
 
-<h1>
-        <img src ="Screenshot (14).png"> 
-</h1>
+
 
 <body>
 
@@ -23,15 +30,17 @@
                 <a href="project.html"> Project </a>
                 <a href="contact.html"> Contact me</a>
             </nav>
-        
+            <h1>
+                <img src ="Screenshot (14).png"> 
+        </h1>
         <img src ="IMG_1479.jpg" id= "img"> 
         <footer id="fonts2"> <strong> (right) with my friend on the ferry. </strong></footer>
 
-   <div id="div.a"><p id="fonts1"> <strong>As you now from the header my name is Himma. 
+   <div><p id="fonts1"> <strong>As you now from the header my name is Himma. 
        So lets talk a bit about me and my background! I attend The Peddie School, 
        which is a boarding school, in Hightstown, New Jersey.</strong> </p> </div> 
         
-   <div id="div.b"> <p id="fonts1"> <strong> I love engineering. I started a robotics team in middle school and continued my
+   <div> <p id="fonts1"> <strong> I love engineering. I started a robotics team in middle school and continued my
         love since. A little insert is that my favorite color is orange. Along with participating in robotics I play field
         hockey and lacrosse.</strong> </p> </div>
 
