--- a/about.html
+++ b/about.html
@@ -11,19 +11,18 @@
     <link href="https://fonts.googleapis.com/css?family=PT+Serif|Roboto+Slab" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-<div class="icon-bar">
-  <a class="active" href="#"><i class="fa fa-home"></i></a> 
-  <a href="#"><i class="fa fa-search"></i></a> 
-  <a href="#"><i class="fa fa-envelope"></i></a> 
-  <a href="#"><i class="fa fa-globe"></i></a>
-  <a href="#"><i class="fa fa-trash"></i></a> 
-</div>
+
+
 </head>
 
 
 
 <body>
-
+    <div class="tab">
+        <button class="about.html" onclick= <a href="about.html"> </a>>About me</button>
+        <button class="contact.html" onclick="openCity(event, 'Contact')">Contact me </button>
+        <button class="resume.html" onclick="openCity(event, 'Resume')">Resume</button>
+      </div>
         <nav>
                 <a href="about.html"> About me</a>
                 <a href="resume.html"> Resume</a>
