--- a/about.html
+++ b/about.html
@@ -18,17 +18,15 @@
 
 
 <body>
-    <div class="tab">
-        <button class="about.html" onclick= <a href="about.html"> </a>>About me</button>
-        <button class="contact.html" onclick="openCity(event, 'Contact')">Contact me </button>
-        <button class="resume.html" onclick="openCity(event, 'Resume')">Resume</button>
-      </div>
-        <nav>
-                <a href="about.html"> About me</a>
-                <a href="resume.html"> Resume</a>
-                <a href="project.html"> Project </a>
-                <a href="contact.html"> Contact me</a>
-            </nav>
+
+        <ul>
+                <li><a href="resume.html">Resume</a></li>
+                <li><a href="project.html">Project</a></li>
+                <li><a href="contact.html">Contact</a></li>
+                <li><a href="about.html">About</a></li>
+              </ul>
+
+    
             <h1>
                 <img src ="Screenshot (14).png"> 
         </h1>
