--- a/contact.html
+++ b/contact.html
@@ -9,12 +9,13 @@
     <link href="https://fonts.googleapis.com/css?family=PT+Serif|Roboto+Slab" rel="stylesheet">
 </head>
 <body>
-        <nav>
-                <a href="about.html"> About me</a>
-                <a href="resume.html"> Resume</a>
-                <a href="project.html"> Project </a>
-                <a href="contact.html"> Contact me</a>
-            </nav>
+
+        <ul>
+                <li><a href="resume.html">Resume</a></li>
+                <li><a href="project.html">Project</a></li>
+                <li><a href="contact.html">Contact</a></li>
+                <li><a href="about.html">About</a></li>
+         </ul>
 
     <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdmkUake1bYBSCf1gbrfnpKS0b0QjLiss5FZvEYyUS8RLfAcg/viewform?embedded=true" width="700" height="520" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
    
