--- a/resume.html
+++ b/resume.html
@@ -7,12 +7,12 @@
     <title>Document</title>
 </head>
 <body>
-        <nav>
-                <a href="about.html"> About me</a>
-                <a href="resume.html"> Resume</a>
-                <a href="project.html"> Project </a>
-                <a href="contact.html"> Contact me</a>
-            </nav>
+        <ul>
+                <li><a href="resume.html">Resume</a></li>
+                <li><a href="project.html">Project</a></li>
+                <li><a href="contact.html">Contact</a></li>
+                <li><a href="about.html">About</a></li>
+              </ul>
     <h1>Resume</h1>
     <iframe src="Himma Aklilu - Resume Template + HS Example.pdf" 
     height="400px" 
