--- a/about.html
+++ b/about.html
@@ -7,11 +7,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title> 
     <link rel="stylesheet" href="portfolioStyle.css" >
+    <link rel= “stylesheet” media = “screen and (max-width: 320px)” href = “mobilestyleSheet.css”/> 
     <link href="https://fonts.googleapis.com/css?family=Caveat|Tangerine" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=PT+Serif|Roboto+Slab" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
-
 
 </head>
 
