--- a/resume.html
+++ b/resume.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" href="portfolioStyle.css" >
 </head>
 <body>
         <ul>
@@ -12,11 +13,13 @@
                 <li><a href="project.html">Project</a></li>
                 <li><a href="contact.html">Contact</a></li>
                 <li><a href="about.html">About</a></li>
+
               </ul>
+
     <h1>Resume</h1>
     <iframe src="Himma Aklilu - Resume Template + HS Example.pdf" 
-    height="400px" 
-    width="600px"
+    height="600px" 
+    width="800px"
 
 </body>
 </html>
