--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <link rel="stylesheet" href="portfolioStyle - Copy.css" >
+    <link rel="stylesheet" href="portfolioStyle.css" >
     <link href="https://fonts.googleapis.com/css?family=PT+Serif|Roboto+Slab" rel="stylesheet">
 </head>
 <body>
@@ -14,7 +14,7 @@
                 <li><a href="resume.html">Resume</a></li>
                 <li><a href="project.html">Project</a></li>
                 <li><a href="contact.html">Contact</a></li>
-                <li><a href="about.html">About</a></li>
+               <li><a href="about.html">About</a></li>
          </ul>
 
     <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdmkUake1bYBSCf1gbrfnpKS0b0QjLiss5FZvEYyUS8RLfAcg/viewform?embedded=true" width="700" height="520" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
