Added some TODO notes.

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
     </head>
     <h1>Himmaaa</h1>
+    <!-- TODO:  Since this is your default page, make sure you have your <nav></nav> links here, otherwise people won't know you have other pages to visit! -->
     <p id="stunt"> As you now from the header my name is Himma. So lets talk a bit about me and my background! I attend The Peddie School, which is a boarding
         school, in Hightstown, New Jersey </p>
         
