--- a/contact.html
+++ b/contact.html
@@ -14,12 +14,12 @@
                 <li><a href="resume.html">Resume</a></li>
                 <li><a href="project.html">Project</a></li>
                 <li><a href="contact.html">Contact</a></li>
-               <li><a href="about.html">About</a></li>
+               <li><a href="about.html">About</a></li> 
          </ul>
+         <img src ="contact me pic.png" width="100%"> 
 
     <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdmkUake1bYBSCf1gbrfnpKS0b0QjLiss5FZvEYyUS8RLfAcg/viewform?embedded=true" width="700" height="520" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
    
-    <img src ="contact me pic.png"> 
 
 </body>
 </html>
