--- a/about.html
+++ b/about.html
@@ -26,9 +26,9 @@
 
     
             <h1>
-                <img src ="Screenshot (14).png"> 
+                <img src ="Screenshot (14).png" width="100%"> 
         </h1>
-        <img src ="IMG_1479.jpg" id= "img"> 
+        <img src ="IMG_1479.jpg" width="100%"> 
         <footer id="fonts2"> <strong> (right) with my friend on the ferry. </strong></footer>
 
    <div><p id="fonts1"> <strong>As you now from the header my name is Himma. 
