--- a/about.html
+++ b/about.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title> 
-    <link rel="stylesheet" href="portfolioStyle.css" >
+    <link rel="stylesheet" href="mobilestyleSheet.css" >
     <link rel= “stylesheet” media = “screen and (max-width: 320px)” href = “mobilestyleSheet.css”/> 
     <link href="https://fonts.googleapis.com/css?family=Caveat|Tangerine" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=PT+Serif|Roboto+Slab" rel="stylesheet">
-
+    <link rel="stylesheet" href="portfolioStyle.css" >
 </head>
 
 
@@ -26,9 +26,9 @@
 
     
             <h1>
-                <img src ="Screenshot (14).png" width="100%"> 
+                <img src ="Screenshot (14).png" width="50%"> 
         </h1>
-        <img src ="IMG_1479.jpg" width="100%"> 
+        <img src ="IMG_1479.jpg" width="50%"> 
         <footer id="fonts2"> <strong> (right) with my friend on the ferry. </strong></footer>
 
    <div><p id="fonts1"> <strong>As you now from the header my name is Himma. 
